--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,14 @@ h1{
 }
 /*header(sticky)|configuraciones,nav*/
 header{
-    align-items: center;
-    height: 5rem;
-    display: flex;
     background-color: rgba(127, 188, 61,0.6);
+    /*display: flex|activo los poderes de */
+    display: flex;
+    /*Align-items: center|centro el nav*/
+    align-items: center;
+    /*altura*/
+    height: 5rem;
+    /*Position: stiky, top: 0|para que quede pegado a inicio*/
     position: sticky;
     top: 0px;
     margin-bottom: 0;
@@ -22,7 +26,6 @@ header{
 
 /*Nav(flex)|ul*/
 nav{
-
     /*Color fondo*/
     background-color: rgba(96, 152, 36, 0.6);
     /*Tamaño nav*/
@@ -31,7 +34,7 @@ nav{
 }
 /*Ul(flex),*/
 nav ul{
-    align-items: center;
+    /*Justify-content: left|para que se mueva a la izquierda*/
     justify-content: left;
         /*Display:flex, flex-wrap:no wrap|para que los elementos del ul esten siempre en fila*/
     display: flex;
@@ -59,12 +62,13 @@ nav ul{
     filter: grayscale(1);
 }
 .modo{
-    width: 80px;
-    height: 40px;
+    width: 55px;
+    height: 35px;
 }
 
 /*Hero banner*/
 .container-hero{
+    /*Tamaño de la pantalla*/
     width: 100%;
     height: 30%;
     display: grid;
