--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ p{
 }
 /*header(sticky)|configuraciones,nav*/
 header{
+    width: 100%;
     z-index: 9999;
     background-color: rgba(149, 13, 149, 0.9);
     /*display: flex|activo los poderes de */
@@ -123,6 +124,10 @@ nav ul{
     position: relative;
     top: 10%;
     margin: auto;
+    
+}
+.presentacion h1, .presentacion h2{
+    text-shadow: 6px 1px 0.1em rgb(188, 184, 196), -6px -1px 0.1em rgb(188, 184, 196);
 }
 .buscador{
     display: flex;
@@ -167,27 +172,30 @@ nav ul{
     cursor: pointer;
 }
 #main-home{
-    display: grid;
+    width: 100%;
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 #propiedades{
     margin: auto;
-    width: 90%;
-    height: 25rem;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    overflow-y: scroll;
-    column-gap: 0.9%;
+    column-gap: 10px;
 }
 .propiedad{
     width: 30%;
-    min-width: 200px;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
 }
-.propiedad img{
+.propiedad a img{
     width: 100%;
+}
+.estrellas{
+    width: 20%;
 }
 footer{
     margin-top: 20px;
@@ -276,7 +284,6 @@ iframe{
 
 /*Configuración*/
 #personalizacion{
-    background-color: beige;
     height: 500px;
 }
 #seguridad{
@@ -291,6 +298,21 @@ iframe{
     background-color: lightcoral;
     height: 500px;
 }
+
+@media only screen and (max-width: 1000px) {
+    .propiedad{
+        width: 45%;
+    }
+}
+
+@media only screen and (max-width: 800px){
+    .propiedad{
+        width: 100%;
+    }
+}
+
+
+
 @media only screen and (min-height: 900px){
 
 
