--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,14 @@ h3{
     text-align: center;
     margin: 0;
 }
+h4{
+    font-size: 3em;
+}
 p{
     margin: 0;
+}
+ul{
+    list-style: none;
 }
 /*header(sticky)|configuraciones,nav*/
 header{
@@ -284,11 +290,67 @@ iframe{
 
 /*Configuración*/
 #personalizacion{
+    width: 100%;
     height: 500px;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(3,1fr);
+    grid-template-areas: 
+    "a y c"
+    "b b b"
+    "b b b";
+}
+.columna{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: start;
+    align-items: center;
+}
+.columna ul{
+    flex-wrap: wrap;
+}
+.c-picker{
+    grid-area: a;
+}
+.m-nocturno{
+    grid-area: y;
+}
+.t-letra{
+    grid-area: c;
+}
+.p-premium{
+    grid-area: b;
+    align-self: center;
+}
+.p-premium button{
+    width: 300px;
+    height: 100px;
+    border-radius: 50px;
+    border: 2px solid black;
+}
+.p-premium button:hover{
+    background-color: black;
+    color: white;
+    border: 2px solid white;
 }
 #seguridad{
     background-color: sandybrown;
     height: 500px;
+    justify-content: space-evenly;
+}
+.cookies{
+    font-size: 2em;    
+}
+label input{
+    width: 30px;
+    height: 30px;
+}
+.c-historial{
+    border-radius: 20px;
+}
+.historial{
+    max-height: 350px;
+    overflow-y: scroll;
 }
 #transferencias{
     background-color: goldenrod;
