Empiezo a trabajar con sass

--- a/css/style.css
+++ b/css/style.css
@@ -1,409 +1,3 @@
-/*Hecho por Lucio Capezzuto*/
-/*Configuraciones generales*/
-html, body{
-    font-size: 15px;
-    font-family: 'Courier New', Courier, monospace;
-    margin: 0;
-    height: 100%;
-}
-.contenedor-todo{
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    display: grid;
-}
-h1{
-    font-size: 3rem;
-}
-h3{
-    font-size: 1rem;
-    text-align: center;
-    margin: 0;
-}
-h4{
-    font-size: 2em;
-    margin-top: 20px;
-}
-p{
-    margin: 0;
-}
-ul{
-    list-style: none;
-}
-/*header(sticky)|configuraciones,nav*/
-header{
-    width: 100%;
-    z-index: 9999;
-    background-color: rgba(10, 78, 142, 0.9);
-    /*display: flex|activo los poderes de */
-    display: flex;
-    /*Align-items: center|centro el nav*/
-    align-items: center;
-    /*altura*/
-    height: 10%;
-    /*Position: stiky, top: 0|para que quede pegado a inicio*/
-    position: sticky;
-    top: 0px;
-    margin-bottom: 0;
-}
-
-/*Nav(flex)|ul*/
-nav{
-    /*Tamaño nav*/
-    width: 85%;
-}
-/*Ul(flex),*/
-nav ul{
-    /*Justify-content: left|para que se mueva a la izquierda*/
-    justify-content: left;
-        /*Display:flex, flex-wrap:no wrap|para que los elementos del ul esten siempre en fila*/
-    display: flex;
-    flex-wrap: nowrap;
-    /*Margin: auto|para que se centre*/
-    margin: auto;
-    /*Margin-left|para separarlo del borde*/
-    margin-left: 0.7rem;
-    /*align-items: center|para centrarlo*/
-    align-items: center;
-    padding-left: 0;
-    padding-bottom: 0;
-    /*gap|para separar los elementos del nav*/
-    gap: 2.5%;
-    /*list-style: none|si agrego links, sueltos no quiero que tengan subrrayado*/
-    list-style: none;
-}
-nav ul a{
-    text-decoration: none;
-    color: wheat;
-    font-size: 110%;
-}
-nav ul a:hover{
-    color: #0ac1ab;
-}
-/*Tamaños y estilos de los elementos del nav|avatar, modo, rueda y signo de pregunta*/
-.logo{
-    width: 4rem;
-}
-.modo-container{
-    width: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.modo{
-    margin: 0;
-    width: 55px;
-    height: 35px;
-}
-
-/*Hero banner*/
-.background-hero{
-    width: 100%;
-    height: 90%;
-    margin: auto;
-    margin-bottom: 9rem;
-    display: grid;
-    align-items: center;
-    position: relative;
-    /*Defino la imagen de banner*/
-    background-image: url(../contenido-pagina/banner.png);
-    /*Background position|la posiciono en el centro*/
-    background-position: center;
-    /*background-size: cover|cubre tamaño del contenedor*/
-    background-size: cover;
-    /*Background-repeat|para que no se repita en ningun caso*/
-    background-repeat: no-repeat;
-}
-#hero{
-    /*Margin: auto| para que quede centrado*/
-    margin: auto;
-    /*Para que este pegado al header*/
-    margin-top: 0;
-    /*Tamaño adecuado a la imagen del banner y responsive*/
-    height: 90%;
-    width: 100%;
-    /*Text-align: center|centra el texto dentro del contenedor*/
-    text-align: center;
-    display: grid;
-    align-items: center;
-}
-.presentacion{
-    position: relative;
-    top: 10%;
-    margin: auto;
-    
-}
-.presentacion h1, .presentacion h2{
-    text-shadow: 6px 1px 0.1em rgb(188, 184, 196), -6px -1px 0.1em rgb(188, 184, 196);
-}
-.buscador{
-    display: flex;
-    /*Justify-content: center|centro la imagen*/
-    justify-content: center;
-    /*centro los elementos del buscador*/
-    align-items: center;
-}
-
-.buscador form{
-    /*Display: flex|activo los poderes de flex-box*/
-    display: flex;
-    align-items: center;
-}
-/*No llegue a comentar todo*/
-.texto{
-    width: 12rem;
-}
-.texto:hover{
-    width: 12rem;
-    border: solid 2px #6b63ff;
-}
-
-.lupa{
-    width: 1rem;
-}
-.boton{
-    display: flex;
-    justify-content: center;
-    width: 1.3rem;
-    height: 1.3rem;
-}
-.boton:hover{
-    cursor: pointer;
-    border: solid 2px#6b63ff;
-}
-.pin-mapa{
-    width: 1rem;
-    margin-left: 10px;
-}
-.pin-mapa:hover{
-    cursor: pointer;
-}
-#main-home{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#propiedades{
-    margin: auto;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    column-gap: 10px;
-}
-.propiedad{
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-}
-.propiedad a img{
-    width: 100%;
-}
-.estrellas{
-    width: 20%;
-}
-footer{
-    margin-top: 20px;
-    padding: 1.3em;
-    align-self: end;
-    background-color: rgb(7, 73, 99);
-    text-align: center;
-    display: grid;
-}
-.redes{
-    display: flex;
-    gap: 10px;
-    margin: auto;
-    list-style: none;
-}
-.redes img{
-    width: 1.5rem;
-    filter: grayscale(1);
-    transition: 0.7s;
-}
-.redes img:hover{
-    width: 1.5rem;
-    filter: none;
-}
-
-/*Propiedad*/
-.galeria{
-    margin: 3%;
-}
-.container-map{
-    width: 80%;
-    display: flex;
-    justify-items: center;
-}
-iframe{
-    width: 50%;
-}
-
-/*Ayuda*/
-.contenedor{
-    width: 100%;
-    display: grid;
-    align-items: center;
-}
-.footer-ayuda{
-    margin-top: 500px;
-}
-.acordion-item{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-/*Cuenta*/
-#main-cuenta{
-        height: 80%;
-}
-#config-cuenta{
-    margin: auto;
-    width: 85%;
-    place-self: center;
-    height: 80%;
-}
-#config-cuenta .row h3{
-        padding: 2%;
-        font-size: 2rem;
-}
-#config-cuenta .row{
-    background-color: cadetblue;
-    align-items: center;
-    justify-content: center;
-    border: solid black 2px;
-}
-.foto-usuario{
-    width: 150px;
-}
-.password{
-    align-items: center;
-    justify-content: center;
-}
-.ojo{
-    position: absolute;
-    display: flex;
-    margin-left: 150px;
-    place-items: center;
-    width: 25px;
-}
-.nueva-cuenta{
-    margin-top: 20px;
-}
-.agregar{
-    width: 150px;
-}
-
-/*Configuración*/
-#personalizacion{
-    background-color: rgb(16, 111, 114);
-    width: 100%;
-    height: 500px;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(3,1fr);
-    grid-template-areas: 
-    "a y c"
-    "b b b"
-    "b b b";
-}
-.columna{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    justify-content: start;
-    align-items: center;
-}
-.columna ul{
-    flex-wrap: wrap;
-}
-.c-picker{
-    grid-area: a;
-}
-.m-nocturno{
-    grid-area: y;
-}
-.t-letra{
-    grid-area: c;
-}
-.p-premium{
-    grid-area: b;
-    align-self: center;
-}
-.p-premium button{
-    width: 300px;
-    height: 100px;
-    border-radius: 50px;
-    border: 2px solid black;
-}
-.p-premium button:hover{
-    background-color: black;
-    color: white;
-    border: 2px solid white;
-}
-#seguridad{
-    background-color: rgb(62, 101, 120);
-    height: 500px;
-    justify-content: space-evenly;
-}
-.cookies{
-    font-size: 2em;    
-}
-label input{
-    width: 30px;
-    height: 30px;
-}
-.c-historial{
-    border-radius: 20px;
-}
-.historial{
-    max-height: 350px;
-    overflow-y: scroll;
-}
-#premium{
-    background-color: rgba(55, 61, 115, 0.859);
-    height: 500px;
-    justify-content: space-evenly;
-}
-
-@media only screen and (max-width: 1000px) {
-    .propiedad{
-        width: 45%;
-    }
-}
-
-@media only screen and (max-width: 800px){
-    .propiedad{
-        width: 100%;
-    }
-}
-
-@media only screen and (max-width: 400px){
-    nav ul a{
-        font-size: 85%;
-    }
-}
-
-@media only screen and (min-height: 900px){
 
 
-    /*Cuenta*/
-    #config-cuenta .row h3{
-        padding: 5%;
-        font-size: 3rem;
-    }
-    #config-cuenta .row input{
-        width: 500px;
-        height: 60px;
-    }
-    .ojo{
-        width: 50px;
-        height: 50px;
-        margin-left: 450px;
-    }
-    .ojo img{
-        width: 90%;
-    }
-
-    
-}
+/*# sourceMappingURL=style.css.map */
