--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,444 @@
+@charset "UTF-8";
+/*Hecho por Lucio Capezzuto*/
+/*Imports*/
+/*Fuentes*/
+@media only screen and (max-width: 1000px) {
+  .propiedad {
+    width: 45%;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .propiedad {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 400px) {
+  nav ul a {
+    font-size: 85%;
+  }
+}
+@media only screen and (min-height: 900px) {
+  /*Cuenta*/
+  #config-cuenta .row h3 {
+    padding: 5%;
+    font-size: 3rem;
+  }
+  #config-cuenta .row input {
+    width: 500px;
+    height: 60px;
+  }
+  .ojo {
+    width: 50px;
+    height: 50px;
+    margin-left: 450px;
+  }
+  .ojo img {
+    width: 90%;
+  }
+}
+html, body {
+  font-size: 15px;
+  font-family: "Courier New", Courier, monospace;
+  margin: 0;
+  max-width: 100%;
+  height: 100%;
+}
 
+.contenedor-todo {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  display: grid;
+}
+
+h1 {
+  font-size: 4rem;
+  text-align: center;
+}
+
+h2 {
+  font-size: 2.5rem;
+  text-align: center;
+}
+
+h3 {
+  font-size: 1.5rem;
+  text-align: center;
+  margin: 0;
+}
+
+h4 {
+  font-size: 1.2rem;
+  text-align: center;
+  margin-top: 20px;
+}
+
+h5 {
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+h6 {
+  font-size: 0.5rem;
+  text-align: center;
+}
+
+p {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+/*header|configuraciones,nav*/
+header {
+  width: 100%;
+  z-index: 9999;
+  background-color: rgba(10, 78, 142, 0.9);
+  display: flex;
+  align-items: center;
+  height: 10%;
+  position: sticky;
+  top: 0px;
+  margin-bottom: 0;
+}
+
+/*Nav|ul*/
+nav {
+  width: 85%;
+}
+nav ul {
+  justify-content: left;
+  display: flex;
+  flex-wrap: nowrap;
+  margin: auto;
+  margin-left: 0.7rem;
+  align-items: center;
+  padding-left: 0;
+  padding-bottom: 0;
+  gap: 2.5%;
+  list-style: none;
+}
+nav ul a {
+  text-decoration: none;
+  color: wheat;
+  font-size: 110%;
+}
+nav ul a:hover {
+  color: #0ac1ab;
+}
+
+.logo {
+  width: 4rem;
+}
+
+.modo-container {
+  width: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modo {
+  margin: 0;
+  width: 55px;
+  height: 35px;
+}
+
+/*Hero banner*/
+.background-hero {
+  width: 100%;
+  height: 90%;
+  margin: auto;
+  margin-bottom: 9rem;
+  display: grid;
+  align-items: center;
+  position: relative;
+  background-image: url(../contenido-pagina/banner.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#hero {
+  margin: auto;
+  margin-top: 0;
+  height: 90%;
+  width: 100%;
+  text-align: center;
+  display: grid;
+  align-items: center;
+}
+
+.presentacion {
+  position: relative;
+  top: 10%;
+  margin: auto;
+}
+
+.presentacion h1, .presentacion h2 {
+  text-shadow: 6px 1px 0.1em rgb(188, 184, 196), -6px -1px 0.1em rgb(188, 184, 196);
+}
+
+.buscador {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.buscador form {
+  display: flex;
+  align-items: center;
+}
+
+.texto {
+  width: 12rem;
+}
+
+.texto:hover {
+  width: 12rem;
+  border: solid 2px #6b63ff;
+}
+
+.lupa {
+  width: 1rem;
+}
+
+.boton {
+  display: flex;
+  justify-content: center;
+  width: 1.3rem;
+  height: 1.3rem;
+}
+
+.boton:hover {
+  cursor: pointer;
+  border: solid 2px #6b63ff;
+}
+
+.pin-mapa {
+  width: 1rem;
+  margin-left: 10px;
+}
+
+.pin-mapa:hover {
+  cursor: pointer;
+}
+
+#main-home {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#propiedades {
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 10px;
+}
+
+.propiedad {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+}
+.propiedad img {
+  width: 100%;
+}
+
+.estrellas {
+  width: 20%;
+}
+
+footer {
+  margin-top: 20px;
+  padding: 1.3em;
+  align-self: end;
+  background-color: rgb(7, 73, 99);
+  text-align: center;
+  display: grid;
+}
+
+.redes {
+  display: flex;
+  gap: 10px;
+  margin: auto;
+  list-style: none;
+}
+.redes img {
+  width: 1.5rem;
+  filter: grayscale(1);
+  transition: 0.7s;
+}
+.redes img:hover {
+  width: 1.5rem;
+  filter: none;
+}
+
+/*Propiedad*/
+.galeria {
+  margin: 3%;
+}
+
+.container-map {
+  width: 80%;
+  display: flex;
+  justify-items: center;
+}
+
+iframe {
+  width: 50%;
+}
+
+/*Ayuda*/
+.contenedor {
+  width: 100%;
+  display: grid;
+  align-items: center;
+}
+
+.footer-ayuda {
+  margin-top: 500px;
+}
+
+.acordion-item {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+/*Cuenta*/
+#main-cuenta {
+  height: 80%;
+}
+
+#config-cuenta {
+  margin: auto;
+  width: 85%;
+  place-self: center;
+  height: 80%;
+}
+#config-cuenta .row {
+  background-color: cadetblue;
+  align-items: center;
+  justify-content: center;
+  border: solid black 2px;
+}
+#config-cuenta .row h3 {
+  padding: 2%;
+  font-size: 2rem;
+}
+
+.foto-usuario {
+  width: 150px;
+}
+
+.password {
+  align-items: center;
+  justify-content: center;
+}
+
+.ojo {
+  position: absolute;
+  display: flex;
+  margin-left: 150px;
+  place-items: center;
+  width: 25px;
+}
+
+.nueva-cuenta {
+  margin-top: 20px;
+}
+
+.agregar {
+  width: 150px;
+}
+
+/*Configuración*/
+#personalizacion {
+  background-color: rgb(16, 111, 114);
+  width: 100%;
+  height: 500px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-areas: "a y c" "b b b" "b b b";
+}
+
+.columna {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: start;
+  align-items: center;
+}
+.columna ul {
+  flex-wrap: wrap;
+}
+
+.c-picker {
+  grid-area: a;
+}
+
+.m-nocturno {
+  grid-area: y;
+}
+
+.t-letra {
+  grid-area: c;
+}
+
+.p-premium {
+  grid-area: b;
+  align-self: center;
+}
+
+.p-premium button {
+  width: 300px;
+  height: 100px;
+  border-radius: 50px;
+  border: 2px solid black;
+}
+
+.p-premium button:hover {
+  background-color: black;
+  color: white;
+  border: 2px solid white;
+}
+
+/*seguridad*/
+#seguridad {
+  background-color: rgb(62, 101, 120);
+  height: 100%;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.cookies {
+  font-size: 2em;
+}
+
+label input {
+  width: 30px;
+  height: 30px;
+}
+
+.c-historial {
+  border-radius: 20px;
+}
+
+.historial {
+  max-height: 350px;
+  overflow-y: scroll;
+}
+
+/*Premium*/
+#premium {
+  background-color: rgba(55, 61, 115, 0.859);
+  height: 100%;
+  justify-content: space-evenly;
+}
 
 /*# sourceMappingURL=style.css.map */
