--- a/SCSS/imports/premain.scss
+++ b/SCSS/imports/premain.scss
@@ -2,7 +2,6 @@
 /*Imports*/
 @import "variables.scss";
 @import "mixins.scss";
-@import "querys.scss";
 html, body{
     font-size: 15px;
     font-family: 'Courier New', Courier, monospace;
@@ -97,16 +96,15 @@ nav{
 /*Hero banner*/
 .background-hero{
     width: 100%;
-    height: 90%;
+    min-height: 90%;
     margin: auto;
     margin-bottom: 9rem;
     display: grid;
     align-items: center;
     position: relative;
-    background-image: url(../contenido-pagina/banner.png);
-    background-position: center;
+    background: linear-gradient(rgba(5, 7, 12, 0.75),rgba(5, 7, 12, 0.75)), url(../contenido-pagina/banner.jpg) no-repeat center center fixed;
     background-size: cover;
-    background-repeat: no-repeat;
+    
 }
 #hero{
     margin: auto;
