--- a/SCSS/imports/premain.scss
+++ b/SCSS/imports/premain.scss
@@ -1,7 +1,4 @@
-/*Hecho por Lucio Capezzuto*/
-/*Imports*/
-@import "variables.scss";
-@import "mixins.scss";
+//Preconfiguración
 html, body{
     font-size: 15px;
     font-family: 'Courier New', Courier, monospace;
@@ -40,310 +37,4 @@ p{
 }
 ul{
     list-style: none;
-}
-/*header|configuraciones,nav*/
-header{
-    width: 100%;
-    z-index: 9999;
-    background-color: rgba(10, 78, 142, 0.9);
-    display: flex;
-    align-items: center;
-    height: 10%;
-    position: sticky;
-    top: 0px;
-    margin-bottom: 0;
-}
-
-/*Nav|ul*/
-nav{
-    width: 85%;
-    ul{
-        justify-content: left;
-        display: flex;
-        flex-wrap: nowrap;
-        margin: auto;
-        margin-left: 0.7rem;
-        align-items: center;
-        padding-left: 0;
-        padding-bottom: 0;
-        gap: 2.5%;
-        list-style: none;
-        a{
-            text-decoration: none;
-            color: wheat;
-            font-size: 110%;
-        }
-        a:hover{
-            color: #0ac1ab;
-        }
-    }
-}
-.logo{
-    width: 4rem;
-}
-.modo-container{
-    width: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.modo{
-    margin: 0;
-    width: 55px;
-    height: 35px;
-}
-
-/*Hero banner*/
-.background-hero{
-    width: 100%;
-    min-height: 90%;
-    margin: auto;
-    margin-bottom: 9rem;
-    display: grid;
-    align-items: center;
-    position: relative;
-    background: linear-gradient(rgba(5, 7, 12, 0.75),rgba(5, 7, 12, 0.75)), url(../contenido-pagina/banner.jpg) no-repeat center center fixed;
-    background-size: cover;
-    
-}
-#hero{
-    margin: auto;
-    margin-top: 0;
-    height: 90%;
-    width: 100%;
-    text-align: center;
-    display: grid;
-    align-items: center;
-}
-.presentacion{
-    position: relative;
-    top: 10%;
-    margin: auto;
-    
-}
-.presentacion h1, .presentacion h2{
-    text-shadow: 6px 1px 0.1em rgb(188, 184, 196), -6px -1px 0.1em rgb(188, 184, 196);
-}
-.buscador{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    form{
-        display: flex;
-        align-items: center;
-    }
-}
-.texto{
-    width: 12rem;
-}
-.texto:hover{
-    width: 12rem;
-    border: solid 2px #6b63ff;
-}
-.lupa{
-    width: 1rem;
-}
-.boton{
-    display: flex;
-    justify-content: center;
-    width: 1.3rem;
-    height: 1.3rem;
-}
-.boton:hover{
-    cursor: pointer;
-    border: solid 2px#6b63ff;
-}
-.pin-mapa{
-    width: 1rem;
-    margin-left: 10px;
-}
-.pin-mapa:hover{
-    cursor: pointer;
-}
-#main-home{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#propiedades{
-    margin: auto;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    column-gap: 10px;
-}
-.propiedad{
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    img{
-        width: 100%;
-    }
-}
-.estrellas{
-    width: 20%;
-}
-footer{
-    margin-top: 20px;
-    padding: 1.3em;
-    align-self: end;
-    background-color: rgb(7, 73, 99);
-    text-align: center;
-    display: grid;
-}
-.redes{
-    display: flex;
-    gap: 10px;
-    margin: auto;
-    list-style: none;
-    img{
-        width: 1.5rem;
-        filter: grayscale(1);
-        transition: 0.7s;
-    }
-    img:hover{
-        width: 1.5rem;
-        filter: none;
-    }
-}
-/*Propiedad*/
-.galeria{
-    margin: 3%;
-}
-.container-map{
-    width: 80%;
-    display: flex;
-    justify-items: center;
-}
-iframe{
-    width: 50%;
-}
-/*Ayuda*/
-.contenedor{
-    width: 100%;
-    display: grid;
-    align-items: center;
-}
-.footer-ayuda{
-    margin-top: 500px;
-}
-.acordion-item{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-/*Cuenta*/
-#main-cuenta{
-        height: 80%;
-}
-#config-cuenta{
-    margin: auto;
-    width: 85%;
-    place-self: center;
-    height: 80%;
-    .row{
-        background-color: cadetblue;
-        align-items: center;
-        justify-content: center;
-        border: solid black 2px;
-        h3{
-            padding: 2%;
-            font-size: 2rem;
-        } 
-    }
-
-}
-.foto-usuario{
-    width: 150px;
-}
-.password{
-    align-items: center;
-    justify-content: center;
-}
-.ojo{
-    position: absolute;
-    display: flex;
-    margin-left: 150px;
-    place-items: center;
-    width: 25px;
-}
-.nueva-cuenta{
-    margin-top: 20px;
-}
-.agregar{
-    width: 150px;
-}
-/*Configuración*/
-#personalizacion{
-    background-color: rgb(16, 111, 114);
-    width: 100%;
-    height: 500px;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(3,1fr);
-    grid-template-areas: 
-    "a y c"
-    "b b b"
-    "b b b";
-}
-.columna{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    justify-content: start;
-    align-items: center;
-    ul{
-        flex-wrap: wrap;
-    }
-}
-.c-picker{
-    grid-area: a;
-}
-.m-nocturno{
-    grid-area: y;
-}
-.t-letra{
-    grid-area: c;
-}
-.p-premium{
-    grid-area: b;
-    align-self: center;
-}
-.p-premium button{
-    width: 300px;
-    height: 100px;
-    border-radius: 50px;
-    border: 2px solid black;
-}
-.p-premium button:hover{
-    background-color: black;
-    color: white;
-    border: 2px solid white;
-}
-/*seguridad*/
-#seguridad{
-    background-color: rgb(62, 101, 120);
-    height: 100%;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-.cookies{
-    font-size: 2em;    
-}
-label input{
-    width: 30px;
-    height: 30px;
-}
-.c-historial{
-    border-radius: 20px;
-}
-.historial{
-    max-height: 350px;
-    overflow-y: scroll;
-}
-/*Premium*/
-#premium{
-    background-color: rgba(55, 61, 115, 0.859);
-    height: 100%;
-    justify-content: space-evenly;
 }
