--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,6 @@ footer {
   filter: none;
 }
 
-/*Fuentes*/
 /*Hero banner*/
 .background-hero {
   width: 100%;
@@ -229,20 +228,26 @@ footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  column-gap: 10px;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
 }
 
 .propiedad {
   width: 30%;
+  height: 300px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.propiedad img {
+.propiedad a img {
   width: 100%;
 }
-
-.estrellas {
-  width: 20%;
+.propiedad .estrellas {
+  display: fle;
+  width: 30%;
+  align-self: start;
+  justify-self: end;
 }
 
 /*Fuentes*/
@@ -442,6 +447,4 @@ label input {
   .ojo img {
     width: 90%;
   }
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
